update exception