@@ -24,11 +24,11 @@ public class OrderService {
 
     // Tạo đơn hàng
     public void createOrder(Order order) {
-        if(order == null){
+        if (order == null) {
             throw new IllegalArgumentException("Order cannot be null");
         }
 
-        if(order.getId() == null || order.getId().isBlank()){
+        if (order.getId() == null || order.getId().trim().isEmpty()) {
             throw new IllegalArgumentException("Order id is required");
         }
 
@@ -37,12 +37,15 @@ public class OrderService {
 
     // Thêm món vào đơn hàng
     public void addItem(String orderId, OrderItem item) {
+        if (orderId == null || orderId.trim().isEmpty()) {
+            throw new IllegalArgumentException("Order id is required");
+        }
 
-        if(item == null){
+        if (item == null) {
             throw new IllegalArgumentException("Order item cannot be null");
         }
 
-        if(item.getQuantity() <= 0){
+        if (item.getQuantity() <= 0) {
             throw new IllegalArgumentException("Quantity must be greater than 0");
         }
 
@@ -56,6 +59,14 @@ public class OrderService {
 
     // Áp dụng mã giảm giá
     public void applyDiscount(String orderId, String code) {
+
+        if (orderId == null || orderId.trim().isEmpty()) {
+            throw new IllegalArgumentException("Order id is required");
+        }
+
+        if (code == null || code.trim().isEmpty()) {
+            throw new IllegalArgumentException("Discount code is required");
+        }
 
         Order order = orderRepository
                 .findById(orderId)
@@ -72,21 +83,24 @@ public class OrderService {
             throw new InvalidDiscountException("Discount expired");
         }
 
-        if(discount.getPercentage() <= 0 || discount.getPercentage() > 1){
+        if (discount.getPercentage() <= 0 || discount.getPercentage() > 100) {
             throw new InvalidDiscountException("Invalid discount percentage");
         }
         order.setDiscount(discount.getPercentage());
     }
 
     // Tính tổng tiền đơn hàng
-    public double calculateTotal(String orderId){
+    public double calculateTotal(String orderId) {
+        if (orderId == null || orderId.trim().isEmpty()) {
+            throw new IllegalArgumentException("Order id is required");
+        }
 
         Order order = orderRepository
                 .findById(orderId)
                 .orElseThrow(() ->
                         new InvalidOrderIdException("Order not found"));
 
-        if(order.getItems().isEmpty()){
+        if (order.getItems().isEmpty()) {
             throw new IllegalStateException("Order has no items");
         }
 
